--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsdoc-to-markdown": "^3.0.0",
     "serialport": "^4.0.7"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.2.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AWielguszewski/flightcontrol.git"
