React || connectscreen + portOpen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "//todo",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron dist/main.js",
     "devstart": "gulp move && electron dist/main.js",
     "rebuild": ".\\node_modules\\.bin\\electron-rebuild.cmd",
     "doc": ".\\node_modules\\.bin\\jsdoc2md main.js >> README.md"
@@ -12,23 +12,23 @@
   "author": "AWielguszewski <roftii@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "devtron": "^1.4.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-webpack": "^1.5.0",
-    "electron": "^1.6.2",
-    "electron-rebuild": "^1.5.7",
-    "jsdoc-to-markdown": "^3.0.0",
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "webpack": "^2.6.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.2",
-    "serialport": "^4.0.7"
+    "devtron": "^1.4.0",
+    "electron": "^1.6.2",
+    "electron-rebuild": "^1.5.7",
+    "gulp-babel": "^6.1.2",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
+    "jsdoc-to-markdown": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "serialport": "^4.0.7",
+    "webpack": "^2.6.0",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "jquery": "^3.2.1",
