--- a/package.json
+++ b/package.json
@@ -19,29 +19,30 @@
     "devtron": "^1.4.0",
     "electron": "^1.6.2",
     "electron-rebuild": "^1.5.7",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
-    "jsdoc-to-markdown": "^3.0.0",
+    "jsdoc-to-markdown": "^4.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
-    "serialport": "^4.0.7",
-    "webpack": "^2.6.0",
-    "webpack-stream": "^3.2.0"
+    "serialport": "4.0.7",
+    "webpack": "^3.10.0",
+    "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "jquery": "^3.2.1",
     "babel-polyfill": "^6.23.0",
-    "mapbox-gl": "^0.36.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "jquery": "^3.2.1",
+    "mapbox-gl": "^0.44.0",
+    "react": "^16.2.0",
+    "react-burger-menu": "^2.2.3",
+    "react-dom": "^16.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AWielguszewski/flightcontrol.git"
+    "url": "git+https://github.com/AWielguszewski/FlightControl.git"
   },
   "bugs": {
-    "url": "https://github.com/AWielguszewski/flightcontrol/issues"
+    "url": "https://github.com/AWielguszewski/FlightControl/issues"
   },
-  "homepage": "https://github.com/AWielguszewski/flightcontrol#readme"
+  "homepage": "https://github.com/AWielguszewski/FlightControl#readme"
 }
