--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-polyfill": "^6.23.0",
     "jquery": "^3.2.1",
     "mapbox-gl": "^0.44.0",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-burger-menu": "^2.2.3",
     "react-dom": "^16.2.0"
